<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context="com.example.researchapp.HomeScreen"
    tools:openDrawer="start">
    <LinearLayout
        android:id="@+id/content_frame"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="#000000" />



    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >


        <ImageView
            android:id="@+id/flowerImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:background="@drawable/flower"
            android:src="@drawable/flower" />
        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:layout_marginHorizontal="2dp"
            android:layout_marginVertical="45dp"
            android:text="HOME"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/currentProperties"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/home"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="-50dp"
            android:background="@android:color/transparent"
            android:text="View Properties"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />



        <Button
            android:id="@+id/upcomingCleanings"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="180dp"
            android:background="@android:color/transparent"
            android:text="View Schedule"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/billsReceipts"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="240dp"
            android:background="@android:color/transparent"
            android:text="View Transactions"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/logOut"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="70dp"
            android:layout_marginVertical="400dp"
            android:background="@android:color/transparent"
            android:text="Log Out"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"


            />
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
