<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/cardNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="68dp"
            android:ems="10"
            android:hint="Card Number"
            android:digits="01234 56789"
            android:inputType="number"
            android:maxLength="19"
            android:textColor="#000000" />
    <EditText
        android:id="@+id/CVCEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="CVC"
        android:digits="01234 56789"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="#000000" />
    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="Date (MMYY)"
        android:digits="01234 56789"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="#000000" />
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/colorPrimary"
        android:text="Upload" />
</LinearLayout>
